// Copyright 2024 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.resultdb.v1;

option go_package = "go.chromium.org/luci/resultdb/proto/v1;resultpb";
option java_package = "com.google.luci.resultdb.v1";
option java_multiple_files = true;

// Service that contains experiments.
//
// Reliability and backwards compatibility is not assured. Do not
// depend on this service from your production environment or anywhere
// you cannot accept breakage at any time.
service Experiments {
  // Sample RPC to allow verification the server is up and running.
  // Replace with actual RPC.
  rpc Echo(EchoRequest) returns (EchoResponse) {};
}

// A request message for Echo RPC.
message EchoRequest {
  // A message, which is to be returned in the response.
  //
  // Must consist only of printable ASCII characters.
  // Max 1024 characters. Mandatory.
  string message = 1;
}

// A response message for Echo RPC.
message EchoResponse {
  // The message, which was provided in the request.
  string message = 1;
}
